--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -30,25 +30,28 @@
         android:layout_marginTop="@dimen/margin_large"
         android:text="@string/welcome_title"
         android:textColor="@color/black"
-        android:textSize="@dimen/text_size_medium"
+        android:textSize="28sp"
+        android:textStyle="bold"
         android:fontFamily="@font/geohogar_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivLogo" />
 
     <!-- App Name -->
+    <!-- App Name (se setea desde código con SpannableString) -->
     <TextView
-        android:id="@+id/tvAppName"
+        android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_small"
-        android:text="@string/app_subtitle"
-        android:textColor="@color/gold"
-        android:textSize="@dimen/text_size_xlarge"
+        android:text=""
+        android:textSize="32sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:fontFamily="@font/geohogar_bold"
+        app:layout_constraintTop_toBottomOf="@id/tvWelcomeTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvWelcomeTitle" />
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
     <!-- Description -->
     <TextView
@@ -59,10 +62,11 @@
         android:gravity="center"
         android:text="@string/welcome_description"
         android:textColor="@color/black"
-        android:textSize="@dimen/text_size_medium"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvAppName" />
+        app:layout_constraintTop_toBottomOf="@id/tvTitulo" />
+
 
 
 
